added TUM support, cleanup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,7 @@
     "pyproj",
     "scattermapbox",
     "umeyama"
-  ]
+  ],
+  "python.linting.enabled": true,
+  "python.analysis.typeCheckingMode": "basic"
 }
