--- a/environment.yml
+++ b/environment.yml
@@ -1,278 +1,289 @@
 name: gorbslam
 channels:
-  - orbingol
   - plotly
   - conda-forge
   - defaults
 dependencies:
+  - _tflow_select=2.2.0=eigen
+  - abseil-cpp=20211102.0=h6b3803e_1
   - absl-py=1.4.0=pyhd8ed1ab_0
-  - aiohttp=3.8.4=py310h8e9501a_0
-  - aiosignal=1.3.1=pyhd8ed1ab_0
-  - appdirs=1.4.4=pyhd3eb1b0_0
   - appnope=0.1.2=py310hca03da5_1001
   - asttokens=2.0.5=pyhd3eb1b0_0
   - astunparse=1.6.3=pyhd8ed1ab_0
-  - async-timeout=4.0.2=pyhd8ed1ab_0
-  - attrs=22.1.0=py310hca03da5_0
+  - attrs=22.2.0=pyh71513ae_0
   - autopep8=1.6.0=pyhd3eb1b0_1
   - backcall=0.2.0=pyhd3eb1b0_0
+  - black=23.3.0=py310hca03da5_0
   - blas=1.0=openblas
-  - blinker=1.5=pyhd8ed1ab_0
+  - blinker=1.6.2=pyhd8ed1ab_0
   - blosc=1.21.3=h313beb8_0
-  - boost-cpp=1.78.0=h1cb353e_1
   - bottleneck=1.3.5=py310h96f19d2_0
-  - branca=0.6.0=py310hca03da5_0
   - brotli=1.0.9=h1a28f6b_7
   - brotli-bin=1.0.9=h1a28f6b_7
   - brotlipy=0.7.0=py310h1a28f6b_1002
   - bzip2=1.0.8=h620ffc9_4
   - c-ares=1.19.0=h80987f9_0
-  - ca-certificates=2022.12.7=h4653dfc_0
-  - cached-property=1.5.2=hd8ed1ab_1
-  - cached_property=1.5.2=pyha770c72_1
-  - cachetools=5.3.0=pyhd8ed1ab_0
-  - cairo=1.16.0=h73a0509_1014
-  - certifi=2022.12.7=pyhd8ed1ab_0
+  - ca-certificates=2023.5.7=hf0a4a13_0
+  - cachetools=4.2.4=pyhd8ed1ab_0
+  - cairo=1.16.0=h29d4eff_2
+  - certifi=2023.5.7=pyhd8ed1ab_0
   - cffi=1.15.1=py310h80987f9_3
-  - cfitsio=4.2.0=h2f961c4_0
+  - cfitsio=3.470=h7f6438f_7
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - chart-studio=1.1.0=py_0
   - click=8.0.4=py310hca03da5_0
   - click-plugins=1.1.1=pyhd3eb1b0_0
   - cligj=0.7.2=pyhd3eb1b0_0
-  - contourpy=1.0.5=py310h525c30c_0
   - cryptography=39.0.1=py310h834c97f_0
-  - curl=7.88.1=h9049daf_0
+  - curl=7.88.1=h80987f9_0
   - cycler=0.11.0=pyhd3eb1b0_0
   - debugpy=1.5.1=py310hc377ac9_0
   - decorator=5.1.1=pyhd3eb1b0_0
-  - entrypoints=0.4=py310hca03da5_0
+  - eigen=3.4.0=hc021e02_0
   - executing=0.8.3=pyhd3eb1b0_0
-  - expat=2.5.0=hb7217d7_0
+  - expat=2.4.9=hc377ac9_0
+  - ffmpeg=4.2.2=h04105a8_0
   - fiona=1.9.1=py310h46d7db6_0
-  - flatbuffers=22.12.06=hb7217d7_2
-  - folium=0.14.0=py310hca03da5_0
-  - font-ttf-dejavu-sans-mono=2.37=hd3eb1b0_0
-  - font-ttf-inconsolata=2.001=hcb22688_0
-  - font-ttf-source-code-pro=2.030=hd3eb1b0_0
-  - font-ttf-ubuntu=0.83=h8b1ccd4_0
-  - fontconfig=2.14.2=h82840c6_0
-  - fonts-anaconda=1=h8fa9717_0
-  - fonts-conda-ecosystem=1=hd3eb1b0_0
-  - fonttools=4.25.0=pyhd3eb1b0_0
-  - freetype=2.12.1=h1192e45_0
+  - flake8=6.0.0=py310hca03da5_0
+  - flatbuffers=23.3.3=hb7217d7_0
+  - fontconfig=2.13.94=heb65262_0
+  - freetype=2.10.4=h17b34a0_1
   - freexl=1.0.6=h1a28f6b_0
-  - frozenlist=1.3.3=py310h8e9501a_0
   - gast=0.4.0=pyh9f0ad1d_0
-  - gdal=3.6.2=py310h0b34360_9
-  - geomdl=5.3.1=py_0
-  - geopandas=0.12.2=pyhd8ed1ab_0
-  - geopandas-base=0.12.2=pyha770c72_0
-  - geos=3.11.1=hb7217d7_0
-  - geotiff=1.7.1=hdcdc974_6
+  - gdal=3.6.2=py310hc92d1c5_1
+  - geopandas=0.9.0=py_1
+  - geopandas-base=0.9.0=py_1
+  - geos=3.9.1=hc377ac9_1
+  - geotiff=1.7.0=h41f0982_1
   - gettext=0.21.1=h0186832_0
-  - giflib=5.2.1=h80987f9_3
-  - google-auth=2.16.2=pyh1a96a4e_0
+  - giflib=5.2.1=h1a8c8d9_3
+  - glib=2.69.1=h514c7bf_2
+  - gmp=6.2.1=h9f76cd9_0
+  - gnutls=3.6.15=h887c41c_0
+  - google-auth=1.21.3=py_0
   - google-auth-oauthlib=0.4.6=pyhd8ed1ab_0
   - google-pasta=0.2.0=pyh8c360ce_0
-  - grpcio=1.51.1=py310h63a0e3a_1
-  - h5py=3.8.0=nompi_py310h3419284_100
-  - hdf4=4.2.15=h1a38d6a_5
-  - hdf5=1.12.2=nompi_ha7af310_101
-  - icu=70.1=h6b3803e_0
+  - graphite2=1.3.14=hc377ac9_1
+  - grpc-cpp=1.46.1=h8e4afa7_1
+  - grpcio=1.42.0=py310h95c9599_0
+  - gst-plugins-base=1.14.1=h313beb8_1
+  - gstreamer=1.14.1=h80987f9_1
+  - h5py=3.7.0=py310h181c318_0
+  - harfbuzz=4.3.0=he9eebac_1
+  - hdf4=4.2.13=h5e329fb_3
+  - hdf5=1.12.1=nompi_had0e5e0_100
+  - icu=68.2=hbdafb3b_0
   - idna=3.4=py310hca03da5_0
-  - importlib-metadata=6.1.0=pyha770c72_0
+  - importlib-metadata=6.5.1=pyha770c72_0
+  - importlib_resources=5.12.0=pyhd8ed1ab_0
   - ipykernel=6.15.0=pyh736e0ef_0
-  - ipympl=0.9.3=pyhd8ed1ab_0
-  - ipython=8.10.0=py310hca03da5_0
-  - ipython_genutils=0.2.0=pyhd3eb1b0_1
-  - ipywidgets=8.0.4=pyhd8ed1ab_0
+  - ipython=8.12.0=py310hca03da5_0
   - jedi=0.18.1=py310hca03da5_1
-  - jinja2=3.1.2=py310hca03da5_0
-  - joblib=1.1.1=py310hca03da5_0
-  - jpeg=9e=h1a8c8d9_3
+  - joblib=1.2.0=pyhd8ed1ab_0
+  - jpeg=9e=h80987f9_1
   - json-c=0.16=h1a28f6b_0
-  - jsonschema=4.17.3=py310hca03da5_0
-  - jupyter_client=7.4.9=py310hca03da5_0
-  - jupyter_core=5.2.0=py310hca03da5_0
-  - jupyterlab_widgets=3.0.5=pyhd8ed1ab_0
-  - kealib=1.5.0=hfd766a6_0
+  - jsonschema=4.17.3=pyhd8ed1ab_0
+  - jupyter_client=8.1.0=py310hca03da5_0
+  - jupyter_core=5.3.0=py310hca03da5_0
+  - kaleido-core=0.2.1=h27ca646_0
+  - kealib=1.5.0=hba2eb73_0
   - keras=2.11.0=pyhd8ed1ab_0
-  - keras-preprocessing=1.1.2=pyhd8ed1ab_0
-  - keras-tuner=1.3.1=pyhd8ed1ab_0
+  - keras-tuner=1.3.5=pyhd8ed1ab_1
   - kiwisolver=1.4.4=py310h313beb8_0
-  - krb5=1.20.1=h69eda48_0
-  - kt-legacy=1.0.4=pyhd8ed1ab_0
+  - krb5=1.19.4=h8380606_0
+  - kt-legacy=1.0.5=pyhd8ed1ab_0
+  - lame=3.100=h1a8c8d9_1003
   - lcms2=2.15=h481adae_0
-  - lerc=4.0.0=h9a09cb3_0
-  - libabseil=20220623.0=cxx17_h28b99d4_6
-  - libaec=1.0.6=hb7217d7_1
-  - libblas=3.9.0=16_osxarm64_openblas
+  - lerc=3.0=hc377ac9_0
+  - libboost=1.73.0=h49e8a49_12
   - libbrotlicommon=1.0.9=h1a28f6b_7
   - libbrotlidec=1.0.9=h1a28f6b_7
   - libbrotlienc=1.0.9=h1a28f6b_7
-  - libcblas=3.9.0=16_osxarm64_openblas
-  - libcurl=7.88.1=h9049daf_0
+  - libclang=12.0.0=default_hc321e17_4
+  - libcurl=7.88.1=h0f1d93c_0
   - libcxx=14.0.6=h848a8c0_0
   - libdeflate=1.17=h80987f9_0
   - libedit=3.1.20221030=h80987f9_0
   - libev=4.33=h1a28f6b_1
   - libffi=3.4.2=hca03da5_6
-  - libgdal=3.6.2=h8d4b95d_9
+  - libgdal=3.6.2=h50c47ba_1
   - libgfortran=5.0.0=11_3_0_hca03da5_28
   - libgfortran5=11.3.0=h009349e_28
-  - libglib=2.74.1=h4646484_1
-  - libgrpc=1.51.1=hb15be72_1
   - libiconv=1.17=he4db4b2_0
-  - libkml=1.3.0=h41464e4_1015
-  - libnetcdf=4.9.1=nompi_h232cb48_101
-  - libnghttp2=1.52.0=hae82a92_0
+  - libidn2=2.3.4=h1a8c8d9_0
+  - libkml=1.3.0=hc4d7c42_6
+  - libllvm12=12.0.1=h93073aa_2
+  - libnetcdf=4.8.1=h1b8e529_2
+  - libnghttp2=1.46.0=h95c9599_0
   - libopenblas=0.3.21=h269037a_0
+  - libopus=1.3.1=h27ca646_1
   - libpng=1.6.39=h80987f9_0
-  - libpq=15.2=h1a28acd_0
-  - libprotobuf=3.21.12=hb5ab8b9_0
-  - librttopo=1.1.0=h844f84d_12
+  - libpq=12.9=h65cfe13_3
+  - libprotobuf=3.20.3=h514c7bf_0
   - libsodium=1.0.18=h1a28f6b_0
   - libspatialindex=1.9.3=hc377ac9_0
-  - libspatialite=5.0.1=h14115fc_23
-  - libsqlite=3.40.0=h76d750c_0
-  - libssh2=1.10.0=h7a5bd25_3
-  - libtiff=4.5.0=h5dffbdd_2
-  - libwebp-base=1.3.0=h1a8c8d9_0
-  - libxcb=1.13=h9b22ae9_1004
-  - libxml2=2.10.3=h87b0503_0
-  - libzip=1.9.2=h76ab92c_1
-  - libzlib=1.2.13=h03a7124_4
+  - libspatialite=4.3.0a=h4707d77_23
+  - libssh2=1.10.0=hf27765b_0
+  - libtasn1=4.19.0=h1a8c8d9_0
+  - libtiff=4.5.0=h313beb8_2
+  - libunistring=0.9.10=h3422bc3_0
+  - libvpx=1.10.0=hc377ac9_0
+  - libwebp=1.2.4=ha3663a8_1
+  - libwebp-base=1.2.4=h80987f9_1
+  - libxml2=2.10.3=h372ba2a_0
+  - libxslt=1.1.37=h1bd8bc4_0
+  - libzip=1.8.0=h0c481fb_0
   - llvm-openmp=14.0.6=hc6e5704_0
   - lz4-c=1.9.4=h313beb8_0
   - mapclassify=2.5.0=py310hca03da5_0
-  - markdown=3.4.1=pyhd8ed1ab_0
-  - markupsafe=2.1.1=py310h1a28f6b_0
-  - matplotlib=3.7.0=py310hca03da5_0
-  - matplotlib-base=3.7.0=py310h46d7db6_0
+  - markdown=3.4.3=pyhd8ed1ab_0
+  - mathjax=2.7.7=hce30654_3
+  - matplotlib-base=3.7.1=py310h46d7db6_1
   - matplotlib-inline=0.1.6=py310hca03da5_0
-  - multidict=6.0.4=py310h8e9501a_0
+  - mccabe=0.7.0=pyhd3eb1b0_0
   - munch=2.5.0=pyhd3eb1b0_0
   - munkres=1.1.4=py_0
-  - nbformat=5.7.0=py310hca03da5_0
+  - mypy_extensions=0.4.3=py310hca03da5_1
+  - nbformat=5.8.0=pyhd8ed1ab_0
   - ncurses=6.4=h313beb8_0
   - nest-asyncio=1.5.6=py310hca03da5_0
-  - networkx=2.8.4=py310hca03da5_0
+  - nettle=3.7.3=h84b5d62_1
+  - networkx=2.8.4=py310hca03da5_1
+  - nomkl=3.0=0
   - nspr=4.35=hb7217d7_0
-  - nss=3.89=h789eff7_0
+  - nss=3.74=h142855e_0
   - numexpr=2.8.4=py310hecc3335_0
   - numpy=1.23.5=py310hb93e574_0
   - numpy-base=1.23.5=py310haf87e8b_0
   - oauthlib=3.2.2=pyhd8ed1ab_0
-  - openjpeg=2.5.0=hbc2ba62_2
-  - openssl=3.1.0=h03a7124_0
+  - openblas=0.3.21=hca03da5_0
+  - openblas-devel=0.3.21=hca03da5_0
+  - opencv=4.6.0=py310h46d7db6_3
+  - openh264=1.8.0=h98b2900_0
+  - openjpeg=2.3.0=h7a6adac_2
+  - openssl=1.1.1t=h03a7124_0
   - opt_einsum=3.3.0=pyhd8ed1ab_1
-  - packaging=22.0=py310hca03da5_0
+  - packaging=23.0=py310hca03da5_0
   - pandas=1.5.3=py310h46d7db6_0
   - parso=0.8.3=pyhd3eb1b0_0
-  - pcre2=10.40=hb34f9b4_0
+  - pathspec=0.10.3=py310hca03da5_0
+  - pcre=8.45=hbdafb3b_0
+  - pcre2=10.37=h37e8eca_1
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=9.4.0=py310h5a7539a_1
+  - pillow=9.4.0=py310h313beb8_0
   - pip=23.0.1=py310hca03da5_0
-  - pixman=0.40.0=h1a28f6b_0
+  - pixman=0.40.0=h27ca646_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
   - platformdirs=2.5.2=py310hca03da5_0
   - plotly=5.13.1=py_0
-  - pooch=1.4.0=pyhd3eb1b0_0
-  - poppler=23.03.0=h9564b9f_0
+  - pooch=1.7.0=pyha770c72_3
+  - poppler=21.11.0=hc480e3c_0
   - poppler-data=0.4.11=hca03da5_1
-  - postgresql=15.2=h45c140d_0
-  - proj=9.1.1=h13f728c_2
+  - postgresql=12.9=h65cfe13_3
+  - proj=7.2.0=heac154c_1
   - prompt-toolkit=3.0.36=py310hca03da5_0
-  - protobuf=4.21.12=py310h0f1eb42_0
+  - protobuf=3.20.3=py310h313beb8_0
   - psutil=5.9.0=py310h1a28f6b_0
-  - pthread-stubs=0.3=h1a28f6b_1
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pure_eval=0.2.2=pyhd3eb1b0_0
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.7=py_0
   - pycodestyle=2.10.0=py310hca03da5_0
   - pycparser=2.21=pyhd3eb1b0_0
+  - pyflakes=3.0.1=py310hca03da5_0
   - pygments=2.11.2=pyhd3eb1b0_0
   - pyjwt=2.6.0=pyhd8ed1ab_0
   - pykalman=0.9.5=py_1
   - pyopenssl=23.0.0=py310hca03da5_0
   - pyparsing=3.0.9=py310hca03da5_0
-  - pyproj=3.4.1=py310h9862ddf_1
+  - pyproj=3.1.0=py310h61a95b3_4
   - pyrsistent=0.18.0=py310h1a28f6b_0
   - pysocks=1.7.1=py310hca03da5_0
-  - python=3.10.9=h3ba56d0_0_cpython
+  - python=3.10.11=hc0d8a6c_2
   - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - python-fastjsonschema=2.16.2=py310hca03da5_0
+  - python-fastjsonschema=2.16.3=pyhd8ed1ab_0
   - python-flatbuffers=23.1.21=pyhd8ed1ab_0
-  - python_abi=3.10=3_cp310
-  - pytz=2022.7=py310hca03da5_0
-  - pyu2f=0.1.5=pyhd8ed1ab_0
+  - python-kaleido=0.2.1=pyhd8ed1ab_0
+  - pytz=2023.3=pyhd8ed1ab_0
   - pyzmq=23.2.0=py310hc377ac9_0
-  - re2=2023.02.01=hb7217d7_0
+  - qhull=2020.2=h48ca7d4_2
+  - qt-main=5.15.2=ha2d02b5_7
+  - qt-webengine=5.15.9=h2903aaf_4
+  - qtwebkit=5.212=h19f419d_5
+  - re2=2022.04.01=h6b3803e_0
   - readline=8.2=h1a28f6b_0
   - requests=2.28.1=py310hca03da5_1
   - requests-oauthlib=1.3.1=pyhd8ed1ab_0
   - retrying=1.3.3=pyhd3eb1b0_2
   - rsa=4.9=pyhd8ed1ab_0
   - rtree=1.0.1=py310hca03da5_0
-  - scikit-learn=1.2.2=py310ha00a7cd_0
-  - scipy=1.10.0=py310h20cbe94_1
-  - setuptools=65.6.3=py310hca03da5_0
-  - shapely=2.0.1=py310h9356385_0
+  - scikit-learn=1.2.2=py310h313beb8_0
+  - scipy=1.10.1=py310h20cbe94_0
+  - setuptools=66.0.0=py310hca03da5_0
+  - shapely=2.0.1=py310h696e30d_0
   - six=1.16.0=pyhd3eb1b0_1
   - snappy=1.1.10=h17c5cce_0
-  - sqlite=3.40.1=h7a7dc30_0
+  - sqlite=3.41.2=h80987f9_0
   - stack_data=0.2.0=pyhd3eb1b0_0
   - tenacity=8.0.1=py310hca03da5_1
   - tensorboard=2.11.2=pyhd8ed1ab_0
-  - tensorboard-data-server=0.6.1=py310hfc83b78_4
+  - tensorboard-data-server=0.6.1=py310ha6e5c4f_0
   - tensorboard-plugin-wit=1.8.1=pyhd8ed1ab_0
-  - tensorflow=2.11.0=cpu_py310h6ecea76_0
-  - tensorflow-base=2.11.0=cpu_py310hb1e6bfe_0
-  - tensorflow-estimator=2.11.0=cpu_py310h238a819_0
+  - tensorflow=2.11.0=eigen_py310h6363ca7_0
+  - tensorflow-base=2.11.0=eigen_py310h8747ca9_0
+  - tensorflow-estimator=2.11.0=py310hca03da5_0
   - termcolor=2.2.0=pyhd8ed1ab_0
-  - threadpoolctl=2.2.0=pyh0d69192_0
-  - tiledb=2.13.2=h9bd36d0_0
+  - threadpoolctl=3.1.0=pyh8a188c0_0
+  - tiledb=2.3.3=h3ad0f7e_2
   - tk=8.6.12=hb8d0fd4_0
   - toml=0.10.2=pyhd3eb1b0_0
+  - tomli=2.0.1=py310hca03da5_0
   - tornado=6.2=py310h1a28f6b_0
   - traitlets=5.7.1=py310hca03da5_0
-  - typing-extensions=4.5.0=hd8ed1ab_0
   - typing_extensions=4.5.0=pyha770c72_0
-  - tzcode=2022g=h1a8c8d9_0
-  - tzdata=2022g=h04d1e81_0
-  - urllib3=1.26.14=py310hca03da5_0
+  - tzdata=2023c=h04d1e81_0
+  - urllib3=1.26.15=py310hca03da5_0
   - wcwidth=0.2.5=pyhd3eb1b0_0
-  - werkzeug=2.2.3=pyhd8ed1ab_0
-  - wheel=0.38.4=py310hca03da5_0
-  - widgetsnbextension=4.0.5=pyhd8ed1ab_0
-  - wrapt=1.15.0=py310h8e9501a_0
-  - xerces-c=3.2.4=h627aa08_1
-  - xorg-libxau=1.0.9=h27ca646_0
-  - xorg-libxdmcp=1.1.3=h27ca646_0
-  - xyzservices=2022.9.0=py310hca03da5_1
+  - werkzeug=2.1.2=pyhd8ed1ab_1
+  - wheel=0.35.1=pyh9f0ad1d_0
+  - wrapt=1.14.1=py310h1a28f6b_0
+  - x264=1!152.20180806=h1a28f6b_0
+  - xerces-c=3.2.4=h389e118_0
   - xz=5.2.10=h80987f9_1
-  - yarl=1.8.2=py310h8e9501a_0
   - zeromq=4.3.4=hc377ac9_0
   - zipp=3.15.0=pyhd8ed1ab_0
-  - zlib=1.2.13=h03a7124_4
-  - zstd=1.5.2=h8574219_0
+  - zlib=1.2.13=h5a0b063_0
+  - zstd=1.5.5=hd90d995_0
   - pip:
+      - actionlib==1.12.0
+      - actionlib-msgs==1.13.0.post3
       - argcomplete==3.0.5
+      - astroid==2.15.2
       - catkin==0.7.18
       - catkin-pkg==0.5.2
       - colorama==0.4.6
+      - contourpy==1.0.7
+      - dill==0.3.6
       - distro==1.8.0
       - docutils==0.19
       - evo==1.22.0
+      - fonttools==4.39.3
       - genmsg==0.5.12
       - genpy==0.6.14
+      - geometry-msgs==1.13.0.post2
       - gnupg==2.3.1
+      - isort==5.12.0
+      - lazy-object-proxy==1.9.0
       - lz4==4.3.2
       - natsort==8.3.1
+      - progressbar2==4.2.0
       - pycryptodome==3.17
       - pycryptodomex==3.17
+      - pydot==1.4.2
+      - pykitti==0.3.1
+      - pylint==2.17.2
+      - python-utils==3.5.2
       - pyyaml==6.0
       - rosbag==1.15.11
       - rosbags==0.9.15
@@ -286,6 +297,12 @@ dependencies:
       - ruamel-yaml==0.17.21
       - ruamel-yaml-clib==0.2.7
       - seaborn==0.12.2
+      - sensor-msgs==1.13.0.post3
       - std-msgs==0.5.13.post0
+      - tensorflow-addons==0.20.0
+      - tf==1.12.1.post3
+      - tf2-msgs==0.7.2.post3
+      - tomlkit==0.11.7
+      - typeguard==2.13.3
       - zstandard==0.20.0
 prefix: /Users/erik/miniconda3/envs/gorbslam
